Fix Navigation Menu z-index #4477

--- a/src/BlazorUI/Demo/Client/Shared/Shared/NavMenu.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Shared/NavMenu.razor.scss
@@ -25,7 +25,7 @@
         top: 0;
         inset: 0;
         height: 100vh;
-        z-index: 1003;
+        z-index: 10000;
         position: fixed;
     }
 
